checkers for num of song votes, current songs, new api token request, api calls for new songs, and check for winners

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 <body>
     <!-- <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
     <div class="container">
-
         <div class="row">
             <div class="col-lg-6 text-center">
                 <iframe id="song1" src="https://open.spotify.com/embed/artist/68Y7rtw5jDdGwGtEW7AAO0" width="300"
@@ -50,7 +49,7 @@
         <br>
         <div class="row">
             <div class="col-lg-12" style="text-align: center;">
-                <span id="timer">10</span> seconds left to vote!!
+                <span id="timer">15</span> votes to win!
             </div>
         </div>
 
