--- a/spotify/index.html
+++ b/spotify/index.html
@@ -174,7 +174,9 @@
         </div>
   </div>
   <!-- view -->
-
+  <footer>
+    <span>Copyright 2020, Spotify and Youtube Battles</span>
+    </footer>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
