--- a/spotify/index.html
+++ b/spotify/index.html
@@ -5,20 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <script src="https://sdk.scdn.co/spotify-player.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-database.js"></script>
   <title>Spotify Battle</title>
 </head>
 
@@ -43,8 +52,8 @@
   <div class="view">
     <!-- Container -->
     <div class="container">
-
-      <!-- <div class="list-group">
+      <div class="row">
+        <!-- <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action active">
             Cras justo odio
           </a>
@@ -53,36 +62,41 @@
           <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
           <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
         </div> -->
-      <div class=col-md-6>
-        <div id="spotify" class="song">
-          <!-- Card -->
-          <div class="card">
+        <div class=col-md-6>
+          <div id="spotify" class="song">
+            <!-- Card -->
+            <div class="card">
 
-            <!-- Card image -->
-            <div class="view">
-              <!-- Spotifyimage -->
-              <img class="card-img-top" src="assets/images/youarewhatyoulistento.jpg" alt="Card image cap">
-              <a href="#" target="_blank">
-                <div class="mask gradient-card"></div>
-              </a>
-            </div>
+              <!-- Card image -->
+              <div class="view">
+                <!-- Spotifyimage -->
+                <img class="card-img-top" src="assets/images/youarewhatyoulistento.jpg" alt="Card image cap">
+                <a href="#" target="_blank">
+                  <div class="mask gradient-card"></div>
+                </a>
+              </div>
 
-            <!-- Card content -->
-            <div class="card-body text-center">
-
-              <h5 class="h5 font-weight-bold"><a href="#" target="_blank">Name of Artist</a></h5>
+              <!-- Card content -->
+              <div class="card-body text-center">
+                <iframe id="song1" src="https://open.spotify.com/embed/artist/68Y7rtw5jDdGwGtEW7AAO0" width="300"
+                  height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <br>
+                <button id="votedsong1" type="submit">Vote</button>
+                <br>
+                Song 1 Votes: <span id="song1votes">0</span>
+                <!-- <h5 class="h5 font-weight-bold"><a href="#" target="_blank">Name of Artist</a></h5>
               <!-- update with song name  -->
-              <h5 class="h5 font-weight-bold">Song Name</h5>
+                <!-- <h5 class="h5 font-weight-bold">Song Name</h5>
 
               <audio id="music" preload="true">
                 <!-- song link -->
-                <source id="song1" src="">
-              </audio>
-              <div id="audioplayer">
+                <!-- <source id="song1" src=""> -->
+                <!-- </audio> -->
+                <!-- <div id="audioplayer">
                 <i id="pButton" class="fas fa-play"></i>
                 <div id="timeline">
                   <div id="playhead"></div>
-                </div>
+                </div> -->
               </div>
 
             </div>
@@ -90,9 +104,9 @@
           </div>
           <!-- Card -->
 
-        </div>
+        <!-- </div> -->
 
-        <div id="vote-button"><button id="song1votes" type="button" class="btn btn-success">Vote</button></div>
+        <!-- <div id="vote-button"><button id="song1votes" type="button" class="btn btn-success">Vote</button></div> -->
         <!-- vote button -->
       </div>
       <!-- </div> -->
@@ -114,50 +128,68 @@
 
             <!-- Card content -->
             <div class="card-body text-center">
+              <iframe id="song2" src="https://open.spotify.com/embed/artist/68Y7rtw5jDdGwGtEW7AAO0" width="300"
+                height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+              <br>
+              <button id="votedsong2" type="submit">Vote</button>
+              <br>
+              Song 2 Votes: <span id="song2votes">0</span>
               <!-- update with artist name -->
-              <h5 class="h5 font-weight-bold"><a href="#" target="_blank">Name of Artist</a></h5>
+              <!-- <h5 class="h5 font-weight-bold"><a href="#" target="_blank">Name of Artist</a></h5> -->
               <!-- update with song name  -->
-              <h5 class="h5 font-weight-bold">Song Name</h5>
+              <!-- <h5 class="h5 font-weight-bold">Song Name</h5>
 
-              <audio id="music" preload="true">
-                <!-- song link -->
-                <source id="song2" src="#">
+              <audio id="music" preload="true"> -->
+              <!-- song link -->
+              <!-- <source id="song2" src="#">
               </audio>
               <div id="audioplayer">
                 <i id="pButton" class="fas fa-play"></i>
                 <div id="timeline">
                   <div id="playhead"></div>
-                </div>
-              </div>
-
+                </div> -->
             </div>
 
           </div>
-          <!-- Card -->
 
         </div>
-        <div id="vote-button"><button id="song2votes" type="button" class="btn btn-success">Vote</button></div>
-        <!-- vote button -->
-      </div>
-      <!-- div -->
+        <!-- Card -->
 
+      </div>
+      <!-- <div id="vote-button"><button id="song2votes" type="button" class="btn btn-success">Vote</button></div> -->
+      <!-- vote button -->
     </div>
-    <!-- container -->
-    <div class="container">
-      <div class="col-lg-6">
-        <div class="card">
-          <div class="card-header">
-            Winners
+    <!-- div -->
+  </div>
+  <br>
+        <div class="row">
+            <div class="col-lg-12" style="text-align: center;">
+                <span id="timer">15</span> votes to win!
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12" style="text-align: center;">
+              <h1>Winners!</h1>
+              <span id="winners"></span>
           </div>
-          <div class="card-body" id="winners">
-            <h2 id="winners"></h2>
-          </div>
+      </div>
+  </div>
+  <!-- container -->
+  <div class="container">
+    <div class="col-lg-6">
+      <div class="card">
+        <div class="card-header">
+          Winners
+        </div>
+        <div class="card-body" id="winners">
+          <h2 id="winners"></h2>
         </div>
       </div>
     </div>
   </div>
+  </div>
   <script type="text/javascript" src="assets/javascript/app.js" charset="UTF-8"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -167,11 +199,11 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script> -->
 
 </body>
 <footer>
-  <span>Copyright 2020, Spotify and Youtube Battles</span>
+  <span>Copyright 2020, Youtify</span>
 </footer>
 
 </html>
