--- a/spotify/index.html
+++ b/spotify/index.html
@@ -169,13 +169,19 @@
         </div>
         <div class="row">
           <div class="col-lg-12" style="text-align: center;">
-              <h1>Winners!</h1>
-              <span id="winners"></span>
+            <div class="card">
+              <div class="card-header">
+                Winners!
+              </div>
+              <div class="card-body" id="winners">
+                <span id="winners"></span>
+              </div>
+            </div>
           </div>
       </div>
   </div>
   <!-- container -->
-  <div class="container">
+  <!-- <div class="container">
     <div class="col-lg-6">
       <div class="card">
         <div class="card-header">
@@ -186,7 +192,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   </div>
   <script type="text/javascript" src="assets/javascript/app.js" charset="UTF-8"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
