adding links for youtube and spotify page

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -39,8 +39,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Spotify <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="youtube.html">YouTube</a>
+        <a class="nav-item nav-link active" href="../spotify/index.html">Spotify <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="../youtube/index.html">YouTube</a>
       </div>
     </div>
   </nav>
