--- a/index.html
+++ b/index.html
@@ -11,18 +11,13 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="w100 text-center"><a href="index.html">YouTube Viral Search</a></h1>
-    </header>
-    <div class="row">
-
-        <button onclick="loadClient()">authorize and load</button>
-        <button onclick="execute()">execute</button>
-
-    </div>
+   
 
     <!-- scripts -->
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
     <script src="https://apis.google.com/js/api.js?onload=handleClientLoad"></script>
     <script src="assets/javascript/youtube.js"></script>
 
