--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-database.js"></script>
-
 </head>
 
 <body>
@@ -30,26 +29,42 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 text-center">
-                <iframe id="song1" src="https://open.spotify.com/embed/artist/68Y7rtw5jDdGwGtEW7AAO0" width="300"
-                    height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <div id="s1Search" class="hidden">
+                    <label for="s1Name">Pick a song</label>
+                    <input id="s1Name" type="text" value="New Search" onfocus="this.value=''">
+                    <input id="s1Submit" type="submit" value="Submit">
+                </div>
+                <div id="s1Img"></div><br>
+                <iframe class="hidden" id="s1" src="" width="300" height="80" frameborder="0" allowtransparency="true"
+                    allow="encrypted-media"></iframe>
                 <br>
-                <button id="votedsong1" type="submit">Vote</button>
-                <br>
-                Song 1 Votes: <span id="song1votes">0</span>
+                <div id="s1Votes" class="hidden">
+                    <button id="s1VoteSubmit" type="submit">Vote</button>
+                    <br>
+                    Song 1 Votes: <span id="s1NumOfVotes">0</span>
+                </div>
             </div>
             <div class="col-lg-6 text-center">
-                <iframe id="song2" src="https://open.spotify.com/embed/artist/68Y7rtw5jDdGwGtEW7AAO0" width="300"
-                    height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <div id="s2Search" class="hidden">
+                    <label for="s2Name">Pick a song</label>
+                    <input id="s2Name" type="text" value="New Search" onfocus="this.value=''">
+                    <input id="s2Submit" type="submit" value="Submit">
+                </div>
+                <div id="s2Img"></div><br>
+                <iframe class="hidden" id="s2" src="" width="300" height="80" frameborder="0" allowtransparency="true"
+                    allow="encrypted-media"></iframe>
                 <br>
-                <button id="votedsong2" type="submit">Vote</button>
-                <br>
-                Song 2 Votes: <span id="song2votes">0</span>
+                <div id="s2Votes" class="hidden">
+                    <button id="s2VoteSubmit" type="submit">Vote</button>
+                    <br>
+                    Song 2 Votes: <span id="s2NumOfVotes">0</span>
+                </div>
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-lg-12" style="text-align: center;">
-                <span id="timer">15</span> votes to win!
+                <span id="count">15</span> votes to win!
             </div>
         </div>
 
