--- a/index.html
+++ b/index.html
@@ -2,27 +2,67 @@
 <html lang="en">
 
 <head>
-    <title>Your awesome Youtube search engine</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Awesome videos!" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>video Battles</title>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+
+    <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-database.js"></script>
+
 </head>
 
 <body>
-   
+    <!-- <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 text-center">
+                <iframe id="player1" type="text/html" width="640" height="390"
+                    src="http://www.youtube.com/embed/"
+                    frameborder="0"></iframe>
+                <br>
+                <button id="votedvideo1" type="submit">Vote</button>
+                <br>
+                video 1 Votes: <span id="video1votes">0</span>
+            </div>
+            <div class="col-lg-6 text-center">
+                <iframe id="player2" type="text/html" width="640" height="390"
+                    src="http://www.youtube.com/embed/"
+                    frameborder="0"></iframe>
+                <br>
+                <button id="votedvideo2" type="submit">Vote</button>
+                <br>
+                video 2 Votes: <span id="video2votes">0</span>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-12" style="text-align: center;">
+                <span id="timer">15</span> votes to win!
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-lg-12" style="text-align: center;">
+                <h1>Winners!</h1>
+                <span id="winners"></span>
+            </div>
+        </div>
+    </div>
     <!-- scripts -->
-    <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-database.js"></script>
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://apis.google.com/js/api.js?onload=handleClientLoad"></script>
     <script src="assets/javascript/youtube.js"></script>
-
 </body>
 
 </html>
