votes are counted

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     src="http://www.youtube.com/embed/"
                     frameborder="0"></iframe>
                 <br>
-                <button id="votedvideo1" type="submit">Vote</button>
+                <button id="video1vote" type="submit">Vote</button>
                 <br>
                 video 1 Votes: <span id="video1votes">0</span>
             </div>
@@ -38,7 +38,7 @@
                     src="http://www.youtube.com/embed/"
                     frameborder="0"></iframe>
                 <br>
-                <button id="votedvideo2" type="submit">Vote</button>
+                <button id="video2vote" type="submit">Vote</button>
                 <br>
                 video 2 Votes: <span id="video2votes">0</span>
             </div>
