--- a/spotify/index.html
+++ b/spotify/index.html
@@ -13,8 +13,8 @@
     crossorigin="anonymous"></script> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
   <script src="https://sdk.scdn.co/spotify-player.js"></script>
@@ -40,6 +40,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/index.html">Youtify</a>
         <a class="nav-item nav-link active" href="../spotify/index.html">Spotify</a>
         <a class="nav-item nav-link" href="../youtube/index.html">YouTube</a>
       </div>
@@ -48,169 +49,60 @@
   <div class="jumbotron">
     <h1 class="display-4">Spotify Battle</h1>
   </div>
-  <!-- https://mdbootstrap.com/snippets/jquery/ascensus/419481 -->
-  <!-- FView -->
   <div class="view">
-        <div id ="search" class="row justify-content-center">
-          <div class=col-md-4>
-              <form class="card card-md">
-                  <div class="card-body row no-gutters align-items-center">
-                      <div class="col-auto">
-                          <i class="fas fa-search h4 text-body"></i>
-                      </div>
-                      <!--end of col-->
-                      <div class="col">
-                          <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search topics or keywords">
-                      </div>
-                      <!--end of col-->
-                      <div class="col-auto">
-                          <button class="btn btn-lg btn-success" type="submit">Search</button>
-                      </div>
-                      <!--end of col-->
-                  </div>
-              </form>
-          </div>
-          <!--end of col-->
-      <!-- </div> -->
-      <!-- </div> -->
-      <!-- <div id ="search_two" class="row justify-content-center"> -->
-        <div class=col-md-4>
-            <form class="card card-md">
-                <div class="card-body row no-gutters align-items-center">
-                    <div class="col-auto">
-                        <i class="fas fa-search h4 text-body"></i>
-                    </div>
-                    <!--end of col-->
-                    <div class="col">
-                        <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search topics or keywords">
-                    </div>
-                    <!--end of col-->
-                    <div class="col-auto">
-                        <button class="btn btn-lg btn-success" type="submit">Search</button>
-                    </div>
-                    <!--end of col-->
-                </div>
-            </form>
-        </div>
-        <!--end of col-->
-    </div>
-    <!-- </div> -->
-    <!-- Container -->
     <div class="container">
       <div class="row">
-        <!-- <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action active">
-              Cras justo odio
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-            <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-            <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-            <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
-          </div> -->
         <div class=col-md-6>
           <div id="spotify" class="song">
-            <!-- Card -->
             <div class="card">
-
-              <!-- Card image -->
-              <div class="view">
-                <!-- Spotifyimage -->
-                <img class="card-img-top" src="assets/images/youarewhatyoulistento.jpg" alt="Card image cap">
-                <a href="#" target="_blank">
-                  <div class="mask gradient-card"></div>
-                </a>
-              </div>
-
-              <!-- Card content -->
               <div class="card-body text-center">
-                <iframe id="song1" src="https://open.spotify.com/embed/artist/68Y7rtw5jDdGwGtEW7AAO0" width="300"
-                  height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <div id="s1Search" class="hidden">
+                  <label for="s1Name">Pick a song</label>
+                  <input id="s1Name" type="text" value="New Search" onfocus="this.value=''">
+                  <input id="s1Submit" type="submit" value="Submit">
+                </div>
+                <div id="s1Img"></div><br>
+                <iframe class="hidden" id="s1" src="" width="300" height="80" frameborder="0" allowtransparency="true"
+                  allow="encrypted-media"></iframe>
                 <br>
-                <button id="votedsong1" type="submit">Vote</button>
-                <br>
-                Song 1 Votes: <span id="song1votes">0</span>
-                <!-- <h5 class="h5 font-weight-bold"><a href="#" target="_blank">Name of Artist</a></h5>
-              <!-- update with song name  -->
-                <!-- <h5 class="h5 font-weight-bold">Song Name</h5>
-
-              <audio id="music" preload="true">
-                <!-- song link -->
-                <!-- <source id="song1" src=""> -->
-                <!-- </audio> -->
-                <!-- <div id="audioplayer">
-                <i id="pButton" class="fas fa-play"></i>
-                <div id="timeline">
-                  <div id="playhead"></div>
-                </div> -->
+                <div id="s1Votes" class="hidden">
+                  <button id="s1VoteSubmit" type="submit">Vote</button>
+                  <br>
+                  Song 1 Votes: <span id="s1NumOfVotes">0</span>
+                </div>
               </div>
-
             </div>
-
           </div>
-          <!-- Card -->
-
-        <!-- </div> -->
-
-        <!-- <div id="vote-button"><button id="song1votes" type="button" class="btn btn-success">Vote</button></div> -->
-        <!-- vote button -->
-      </div>
-      <!-- </div> -->
-
-
-      <div class=col-md-6>
-        <div id="spotify" class="song">
-          <!-- Card -->
-          <div class="card">
-
-            <!-- Card image -->
-            <div class="view">
-              <!-- Spotifyimage -->
-              <img class="card-img-top" src="assets/images/youarewhatyoulistento.jpg" alt="Card image cap">
-              <a href="#" target="_blank">
-                <div class="mask gradient-card"></div>
-              </a>
-            </div>
-
-            <!-- Card content -->
-            <div class="card-body text-center">
-              <iframe id="song2" src="https://open.spotify.com/embed/artist/68Y7rtw5jDdGwGtEW7AAO0" width="300"
-                height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-              <br>
-              <button id="votedsong2" type="submit">Vote</button>
-              <br>
-              Song 2 Votes: <span id="song2votes">0</span>
-              <!-- update with artist name -->
-              <!-- <h5 class="h5 font-weight-bold"><a href="#" target="_blank">Name of Artist</a></h5> -->
-              <!-- update with song name  -->
-              <!-- <h5 class="h5 font-weight-bold">Song Name</h5>
-
-              <audio id="music" preload="true"> -->
-              <!-- song link -->
-              <!-- <source id="song2" src="#">
-              </audio>
-              <div id="audioplayer">
-                <i id="pButton" class="fas fa-play"></i>
-                <div id="timeline">
-                  <div id="playhead"></div>
-                </div> -->
-            </div>
-
-          </div>
-
         </div>
-        <!-- Card -->
-
-      </div>
-      <!-- <div id="vote-button"><button id="song2votes" type="button" class="btn btn-success">Vote</button></div> -->
-      <!-- vote button -->
-    </div>
-    <!-- div -->
-  </div>
-  <br>
-        <div class="row">
-            <div class="col-lg-12" style="text-align: center;">
-                <span id="timer">15</span> votes to win!
+          <div class=col-md-6>
+            <div id="spotify" class="song">
+              <div class="card">
+                <div class="card-body text-center">
+                  <div id="s2Search" class="hidden">
+                    <label for="s2Name">Pick a song</label>
+                    <input id="s2Name" type="text" value="New Search" onfocus="this.value=''">
+                    <input id="s2Submit" type="submit" value="Submit">
+                  </div>
+                  <div id="s2Img"></div><br>
+                  <iframe class="hidden" id="s2" src="" width="300" height="80" frameborder="0" allowtransparency="true"
+                    allow="encrypted-media"></iframe>
+                  <br>
+                  <div id="s2Votes" class="hidden">
+                    <button id="s2VoteSubmit" type="submit">Vote</button>
+                    <br>
+                    Song 2 Votes: <span id="s2NumOfVotes">0</span>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+        <br>
+        <div class="row">
+          <div class="col-lg-12" style="text-align: center;">
+            <span id="timer">15</span> votes to win!
+          </div>
         </div>
         <div class="row">
           <div class="col-lg-12" style="text-align: center;">
@@ -223,35 +115,11 @@
               </div>
             </div>
           </div>
-      </div>
-  </div>
-  <!-- container -->
-  <!-- <div class="container">
-    <div class="col-lg-6">
-      <div class="card">
-        <div class="card-header">
-          Winners
-        </div>
-        <div class="card-body" id="winners">
-          <h2 id="winners"></h2>
         </div>
       </div>
-    </div>
-  </div> -->
-  </div>
-  <script type="text/javascript" src="assets/javascript/app.js" charset="UTF-8"></script>
-  <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-database.js"></script> -->
 
+    </div>
+    <script type="text/javascript" src="assets/javascript/app.js" charset="UTF-8"></script>
 </body>
 <footer>
   <span>Copyright 2020, Youtify</span>
