--- a/spotify/index.html
+++ b/spotify/index.html
@@ -29,7 +29,7 @@
 
   <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-database.js"></script>
-  <title>Spotify Battle</title>
+  <title>Youtify</title>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/index.html">Youtify</a>
-        <a class="nav-item nav-link active" href="../spotify/index.html">Spotify</a>
+        <a class="nav-item nav-link" href="../spotify/index.html">Spotify</a>
         <a class="nav-item nav-link" href="../youtube/index.html">YouTube</a>
       </div>
     </div>
