--- a/youtube/index.html
+++ b/youtube/index.html
@@ -20,8 +20,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">YouTube <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="Spotify.html">Spotify</a>
+            <a class="nav-item nav-link" href="/index.html">Youtify</a>
+            <a class="nav-item nav-link" href="../spotify/index.html">Spotify</a>
+        <a class="nav-item nav-link" href="../youtube/index.html">YouTube</a>
           </div>
         </div>
       </nav>
