adding flexbox to spotify

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/index.html">Youtify</a>
+        <a class="nav-item nav-link" href="../Project1/index.html">Youtify</a>
         <a class="nav-item nav-link" href="../spotify/index.html">Spotify</a>
         <a class="nav-item nav-link" href="../youtube/index.html">YouTube</a>
       </div>
