--- a/spotify/index.html
+++ b/spotify/index.html
@@ -5,12 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -26,7 +20,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-
   <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-database.js"></script>
   <title>Youtify</title>
@@ -40,7 +33,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/index.html">Youtify</a>
+        <a class="nav-item nav-link" href="/Project1/index.html">Youtify</a>
         <a class="nav-item nav-link" href="../spotify/index.html">Spotify</a>
         <a class="nav-item nav-link" href="../youtube/index.html">YouTube</a>
       </div>
@@ -50,7 +43,7 @@
     <h1 class="display-4">Spotify Battle</h1>
   </div>
   <div class="view">
-    <div class="container">
+    <div class="flex-container">
       <div class="row">
         <div class=col-md-6>
           <div id="spotify" class="song">
@@ -74,52 +67,52 @@
             </div>
           </div>
         </div>
-          <div class=col-md-6>
-            <div id="spotify" class="song">
-              <div class="card">
-                <div class="card-body text-center">
-                  <div id="s2Search" class="hidden">
-                    <label for="s2Name">Pick a song</label>
-                    <input id="s2Name" type="text" value="New Search" onfocus="this.value=''">
-                    <input id="s2Submit" type="submit" value="Submit">
-                  </div>
-                  <div id="s2Img"></div><br>
-                  <iframe class="hidden" id="s2" src="" width="300" height="80" frameborder="0" allowtransparency="true"
-                    allow="encrypted-media"></iframe>
+        <div class=col-md-6>
+          <div id="spotify" class="song">
+            <div class="card">
+              <div class="card-body text-center">
+                <div id="s2Search" class="hidden">
+                  <label for="s2Name">Pick a song</label>
+                  <input id="s2Name" type="text" value="New Search" onfocus="this.value=''">
+                  <input id="s2Submit" type="submit" value="Submit">
+                </div>
+                <div id="s2Img"></div><br>
+                <iframe class="hidden" id="s2" src="" width="300" height="80" frameborder="0" allowtransparency="true"
+                  allow="encrypted-media"></iframe>
+                <br>
+                <div id="s2Votes" class="hidden">
+                  <button id="s2VoteSubmit" type="submit">Vote</button>
                   <br>
-                  <div id="s2Votes" class="hidden">
-                    <button id="s2VoteSubmit" type="submit">Vote</button>
-                    <br>
-                    Song 2 Votes: <span id="s2NumOfVotes">0</span>
-                  </div>
+                  Song 2 Votes: <span id="s2NumOfVotes">0</span>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-        <br>
-        <div class="row">
-          <div class="col-lg-12" style="text-align: center;">
-            <span id="timer">15</span> votes to win!
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-12" style="text-align: center;">
+        <span id="timer">15</span> votes to win!
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12" style="text-align: center;">
+        <div class="card">
+          <div class="card-header">
+            Winners!
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12" style="text-align: center;">
-            <div class="card">
-              <div class="card-header">
-                Winners!
-              </div>
-              <div class="card-body" id="winners">
-                <span id="winners"></span>
-              </div>
-            </div>
+          <div class="card-body" id="winners">
+            <span id="winners"></span>
           </div>
         </div>
       </div>
-
     </div>
-    <script type="text/javascript" src="assets/javascript/app.js" charset="UTF-8"></script>
+  </div>
+
+  </div>
+  <script type="text/javascript" src="assets/javascript/app.js" charset="UTF-8"></script>
 </body>
 <footer>
   <span>Copyright 2020, Youtify</span>
