adding favicon logo and css for nav bar

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -33,14 +33,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/Project1/index.html">Youtify</a>
+        <a href="../index.html"><img id="logo" src="../youtify.png"></a>
+        <a class="nav-item nav-link" href="../index.html">Home</a>
         <a class="nav-item nav-link" href="../spotify/index.html">Spotify</a>
         <a class="nav-item nav-link" href="../youtube/index.html">YouTube</a>
       </div>
     </div>
   </nav>
   <div class="jumbotron">
-    <h1 class="display-4">Spotify Battle</h1>
+    <h1 class="spotify-text">Spotify Battle</h1>
   </div>
   <div class="view">
     <div class="flex-container">
