adding copyright symbol and css to pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a href="/index.html"><img id="logo" src="youtify.png"></a>
-        <a class="nav-item nav-link" href="../Project1/index.html">Home</a>
+        <a class="nav-item nav-link active" href="../Project1/index.html">Home<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="../Project1/spotify/index.html">Spotify</a>
         <a class="nav-item nav-link" href="../Project1/youtube/index.html">YouTube</a>
       </div>
@@ -50,6 +50,6 @@
     </div>
 </body>
 <footer>
-  <span>Copyright 2020, Youtify</span>
+  <span> &copy; Copyright 2020, Youtify</span>
 </footer>
 </html>
