--- a/spotify/index.html
+++ b/spotify/index.html
@@ -35,7 +35,7 @@
       <div class="navbar-nav">
         <a href="../index.html"><img id="logo" src="../youtify.png"></a>
         <a class="nav-item nav-link" href="../index.html">Home</a>
-        <a class="nav-item nav-link" href="../spotify/index.html">Spotify</a>
+        <a class="nav-item nav-link active" href="../spotify/index.html">Spotify<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="../youtube/index.html">YouTube</a>
       </div>
     </div>
@@ -116,7 +116,7 @@
   <script type="text/javascript" src="assets/javascript/app.js" charset="UTF-8"></script>
 </body>
 <footer>
-  <span>Copyright 2020, Youtify</span>
+  <span> &copy; Copyright 2020, Youtify</span>
 </footer>
 
 </html>
