adding css button animation

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     </div>
         <div class="row">
             <div id="battle-button">
-                <button id="battlebtn" type="submit" class="btn btn-success"><a href="../Project1/spotify/index.html">Spotify Battle</a></button>
+                <button id="battlebtn1" type="submit" class="btn btn-success"><a href="../Project1/spotify/index.html">Spotify Battle</a></button>
             </div>
             <div id="battle-button">
-                <button id="battlebtn" type="text" class="btn btn-danger"><a href="../Project1/youtube/index.html">Youtube Battle</a></button>
+                <button id="battlebtn2" type="text" class="btn btn-danger"><a href="../Project1/youtube/index.html">Youtube Battle</a></button>
             </div>
         </div>
     </div>
