added js to for latest winner and minor formatting

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -98,25 +98,25 @@
       </div>
     </div>
       <div class="row">
-        <div class="col-lg-12" style="text-align: center;">
-          <div class="card">
+        <div class="col-lg-12">
+          <div class="card" id="winnerFormat">
             <div class="card-header">
-              Winners!
+              Latest Winner!
             </div>
-            <div class="card-body" id="winners">
-              <span id="winners"></span>
+            <div class="card-body">
+              <span id="latestWinner"></span>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12" style="text-align: center;">
+      <div class="col-lg-12">
         <div class="card">
           <div class="card-header">
             Winners!
           </div>
-          <div class="card-body" id="winners">
+          <div class="card-body">
             <span id="winners"></span>
           </div>
         </div>
