fix issue where winner was being push many many times

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -55,10 +55,10 @@
                   <input id="s1Name" type="text" value="New Search" onfocus="this.value=''">
                   <input id="s1Submit" type="submit" value="Submit">
                 </div>
-                <div id="s1Img"></div><br>
+                <div id="s1Img"></div>
                 <iframe class="hidden" id="s1" src="" width="300" height="80" frameborder="0" allowtransparency="true"
                   allow="encrypted-media"></iframe>
-                <br>
+                <br><br>
                 <div id="s1Votes" class="hidden">
                   <button id="s1VoteSubmit" type="submit">Vote</button>
                   <br>
@@ -77,10 +77,10 @@
                   <input id="s2Name" type="text" value="New Search" onfocus="this.value=''">
                   <input id="s2Submit" type="submit" value="Submit">
                 </div>
-                <div id="s2Img"></div><br>
+                <div id="s2Img"></div>
                 <iframe class="hidden" id="s2" src="" width="300" height="80" frameborder="0" allowtransparency="true"
                   allow="encrypted-media"></iframe>
-                <br>
+                <br><br>
                 <div id="s2Votes" class="hidden">
                   <button id="s2VoteSubmit" type="submit">Vote</button>
                   <br>
