fixed the height and width of the iframe

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -58,7 +58,7 @@
                   <input id="s1Submit" type="submit" value="Submit" class="submit1">
                 </div>
 
-                <iframe id="player1" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/"
+                <iframe id="player1" type="text/html" width="360" height="250" src="http://www.youtube.com/embed/"
                   frameborder="0"></iframe>
                 <br>
                 <div id="s1Votes" class="votes1 hidden">
@@ -80,7 +80,7 @@
                   <input id="s2Submit" type="submit" value="Submit" class="submit2">
                 </div>
                 
-                <iframe id="player2" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/"
+                <iframe id="player2" type="text/html" width="360" height="250" src="http://www.youtube.com/embed/"
                   frameborder="0"></iframe>
                 <br>
                 <div id="s2Votes" class="votes2 hidden">
@@ -105,7 +105,7 @@
             <div class="card-header">
               Latest Winners!
             </div>
-            <div class="card-body">
+            <div class="card-body" style="margin-left: 32%;">
               <span id="latestWinner"></span>
             </div>
           </div>
